# chess_robot

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-nano.txt  requirements.txt
chess_robot/: __init__.py  types.py
configs/: app.yaml  cameras.yaml  demo_movebook.yaml  gui.yaml  robot.yaml  vision.yaml
docs/: BOARD_CALIBRATION.md  CURRENT_SCOPE.md  DECISIONS.md  ENVIRONMENT.md  EVALUATION_PLAN.md  GRIPPER_SAFETY_AUDIT.md  GRIPPER_SERVO_DIAGNOSTIC.md  MASTER_CONTEXT.md  TEST_PLAN.md
scripts/: apply_overhead_camera_settings.sh  setup_nano_env.sh
tests/: test_approach_orientation.py  test_approach_policy.py  test_audit_demo_movebook_calibration.py  test_board_mapping.py  test_board_profile.py  test_board_state.py  test_demo_game_flow.py  test_demo_movebook.py  test_explain_square_audit.py  test_fk.py  test_gripper_servo_diagnostics.py  test_ik.py  test_ik_seed_poses.py  test_jacobian.py  test_jog_and_save_square_pose.py  test_joint_calibration.py  test_joint_calibration_limits_audit.py  test_joint_limits_profiles.py  test_legal_move_matcher.py  test_motion_primitives.py  test_motion_safety.py  test_movebook_physical_sequence.py  test_open_loop_pick_place.py  test_reachability.py  test_robot_square_map.py  test_safe_recovery.py  test_safe_transfer.py  test_single_ik_pose.py  test_square_above_motion.py  test_square_target_audit.py  test_square_target_generation.py  test_state_transition.py  test_stockfish_engine.py  test_task_planner.py  test_teach_square_pose.py  test_teleop_joints_keyboard.py  test_tool_frames.py  test_workspace.py  (+1 more)
(+151 files in other folders)
